[CoordinatedGraphics] Schedule rendering after setLayerTreeStateIsFrozen(false) in non-AC mode https://bugs.webkit.org/show_bug.cgi?id=229749

We should schedule another rendering when the setLayerTreeStateIsFrozen(false) is called.
In some rare cases, the browser only shows the white page after the page transition,
because the rendering is skipped while the layer tree is frozen and there was no guarantee that there is
another rendering after setLayerTreeStateIsFrozen(false).

Reviewed by Carlos Garcia Campos.

Tested by manual.

* WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:
(WebKit::DrawingAreaCoordinatedGraphics::setLayerTreeStateIsFrozen): Schedule another rendering when the layer tree becomes unfrozen.


Canonical link: https://commits.webkit.org/241174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281841 268f45cc-cd09-0410-ab3c-d52691b4dbfc